added successfully an improved version of path_exists and checksum method

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -22,18 +22,70 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "zl.ssh('b1', 'atari', 'babylon')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sftp = zl.open_sftp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully created archive C:\\Users\\weezl\\Desktop\\testFolder.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['.cache',\n",
+       " '.selected_editor',\n",
+       " '.gitconfig',\n",
+       " '.python_history',\n",
+       " '.bash_logout',\n",
+       " '.bash_history',\n",
+       " 'newsfeed',\n",
+       " 'GPIObench',\n",
+       " '.local',\n",
+       " '.profile',\n",
+       " '.bashrc',\n",
+       " '.ssh',\n",
+       " 'BudSensorZero']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "origin_folder = 'C:\\\\Users\\\\weezl\\\\Desktop\\\\testFolder'\n",
-    "zl.compress(origin_folder)"
+    "sftp.listdir('/home/b1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<SFTPAttributes: [ size=4096 uid=1000 gid=1000 mode=0o40755 atime=1701745001 mtime=1721224210 ]>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sftp.stat('/home/b1/')\n"
    ]
   },
   {
@@ -42,24 +94,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\weezl\\Desktop\n",
-      "testFolder\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import os\n",
-    "import pathlib\n",
-    "path = origin_folder\n",
-    "path = pathlib.Path(path)\n",
-    "parent_dir = str(path.parent.absolute())\n",
-    "base_name = path.name\n",
-    "\n",
-    "print(parent_dir)\n",
-    "print(base_name)\n"
+    "zl.path_exists('/home/b1/hello.txt', 1)"
    ]
   }
  ],
