--- a/dev.ipynb
+++ b/dev.ipynb
@@ -29,22 +29,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "366147"
+       "366140"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Socket exception: An existing connection was forcibly closed by the remote host (10054)\n"
+     ]
     }
    ],
    "source": [
-    "zl.get_size('C:\\\\Users\\\\weezl\\\\Desktop\\\\testFolder')"
+    "zl.get_size('C:\\\\Users\\\\weezl\\\\Desktop\\\\testFolder\\\\img1.jpg')"
    ]
   },
   {
