--- a/dev.ipynb
+++ b/dev.ipynb
@@ -2,200 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ziplin3 import client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zl = client()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zl.ssh('b1', 'atari', 'babylon')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "366140"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Socket exception: An existing connection was forcibly closed by the remote host (10054)\n"
-     ]
-    }
-   ],
-   "source": [
-    "zl.get_size('C:\\\\Users\\\\weezl\\\\Desktop\\\\testFolder\\\\img1.jpg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sftp = zl.open_sftp()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['.cache',\n",
-       " '.selected_editor',\n",
-       " '.gitconfig',\n",
-       " '.python_history',\n",
-       " '.bash_logout',\n",
-       " '.bash_history',\n",
-       " 'newsfeed',\n",
-       " 'GPIObench',\n",
-       " '.local',\n",
-       " '.profile',\n",
-       " '.bashrc',\n",
-       " '.ssh',\n",
-       " 'test.txt',\n",
-       " 'BudSensorZero']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sftp.listdir('/home/b1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<SFTPAttributes: [ size=4096 uid=1000 gid=1000 mode=0o40755 atime=1701745001 mtime=1721224210 ]>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sftp.stat('/home/b1/')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zl.path_exists('/home/b1/Gimbal/gimbal.py', 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "sftp.mkdir()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'hello.txt'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Socket exception: An existing connection was forcibly closed by the remote host (10054)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "Path ('/home/b1/hello.txt').name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "1 day, 1:01:00\n"
      ]
     }
    ],
    "source": [
-    "a = [1,2,3]\n",
-    "b = [4,5,6]\n",
+    "from datetime import datetime, timedelta\n",
     "\n",
-    "x=5\n",
-    "if x in a or x in b:\n",
-    "    print(True)\n",
-    "else:\n",
-    "    print(False)"
+    "dt = timedelta(days=1, hours=1, seconds=60)\n",
+    "\n",
+    "print(str(dt))"
    ]
   }
  ],
