--- a/dev.ipynb
+++ b/dev.ipynb
@@ -2,30 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('src')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "data": {
+      "text/plain": [
+       "'client'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from ziplin3 import client, cron\n",
+    "\n",
+    "zl = client()\n",
+    "zl.__class__.__name__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1 day, 1:01:00\n"
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\weezl\\Desktop\\B0-B\\Scripting\\ZipLin3\\src\\ziplin3\\client.py\", line 649, in load\n",
+      "    return cron(\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: 'C:\\\\Users\\\\weezl\\\\.cache\\\\zipLin3\\\\hello.json'\n"
      ]
     }
    ],
    "source": [
-    "from datetime import datetime, timedelta\n",
-    "\n",
-    "dt = timedelta(days=1, hours=1, seconds=60)\n",
-    "\n",
-    "print(str(dt))"
+    "cron.load('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(True)"
    ]
   }
  ],
